--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ button {
     padding-top: 10px;
     padding-bottom: 10px;
     border: 0;
-    background-color: green;
+    background-color: orange;
     color: white;
     border-radius: 6px;
     margin-top: 20px;
